[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/TitanOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Tela Inicial.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Tela Inicial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Jogar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -17.5
margin_right = 42.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "Jogar"
flat = true

[node name="Creditos" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 20.0
margin_right = 53.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "Cr√©ditos"
flat = true

[node name="Sair" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -130.0
margin_right = 58.5
margin_bottom = -105.0
custom_fonts/font = SubResource( 4 )
text = "Sair do jogo"
flat = true

[node name="Titulo" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -177.0
margin_top = 50.0
margin_right = 177.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "Gravity Changer"

[connection signal="pressed" from="Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
